# Copyright (c) 2022-2025 Huawei Device Co., Ltd.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
import("//build/lite/config/component/lite_component.gni")
import("//build/ohos.gni")

config("popt_config") {
  include_dirs = [ "//third_party/popt/src" ]
}

popt_sources = [
  "./src/popt.c",
  "./src/popthelp.c",
  "./src/poptint.c",
  "./src/poptparse.c",
]

ohos_static_library("popt_static") {
  sources = popt_sources
  output_name = "popt"
  public_configs = [ ":popt_config" ]
  defines = [
    "HAVE_CONFIG_H",
    "_GNU_SOURCE",
    "_REENTRANT",
  ]
  cflags_c = [
    "-Wall",
    "-Os",
    "-g",
    "-W",
    "-ffunction-sections",
    "-fdata-sections",
    "-Wno-unused-const-variable",
    "-Wno-unused-parameter",
    "-Wno-gnu-alignof-expression",
  ]
  ldflags = [
    "-Wl",
    "--gc-sections",
  ]
}
